# simple_lisp_in_cpp

./: .gitignore  CMakeLists.txt  Readme.md  lisp_like
include/: ll_std.h
include/BeeNum/: Brat.h
include/BeeNum/Brat/: io.cpp
src/: CMakeLists.txt  main.cpp
src/builtin/: builtin.cpp  builtin.hpp
src/expression/: expression.cpp  expression.hpp
src/llist/: helpers.cpp  helpers.hpp  list.cpp  list.hpp
src/parser/: parser.cpp  parser.hpp
src/runtime/: runtime.cpp  runtime.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
src/variable/: scope.cpp  scope.hpp  variable.cpp  variable.hpp
tests/: 0_multiline_comments.lisp  10_collect_filter.lisp  1_simple_expr.lisp  2_simple_prog.lisp  3_simple_func.lisp  4_simple_if.lisp  5_range.lisp  6_math.lisp  7_include.lisp  8_tags.lisp  9_rule_matching.lisp  caesar.lisp  ggT.lisp  test.lisp
tests/inc/: stdio.lisp
